// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`matches snapshots changes variant 1`] = `
<DocumentFragment>
  <button
    class="sc-eDvSVe sc-jSUZER gwaIpe aje-btn aje-btn--secondary"
    type="button"
  >
    Click Me
  </button>
</DocumentFragment>
`;

exports[`matches snapshots loading completed state 1`] = `
<DocumentFragment>
  <button
    aria-label="loading"
    class="sc-eDvSVe sc-jSUZER gwaIpe aje-btn aje-btn--primary is-loading"
    type="button"
  >
    <div
      class="sc-bcXHqe gqSyei aje-spinner"
    >
      <span
        class="sc-hLBbgP kkuUR"
      />
    </div>
    Click Me
  </button>
</DocumentFragment>
`;

exports[`matches snapshots loading state 1`] = `
<DocumentFragment>
  <button
    aria-label="loading"
    class="sc-eDvSVe sc-jSUZER gwaIpe aje-btn aje-btn--primary is-loading"
    type="button"
  >
    <div
      class="sc-bcXHqe gqSyei aje-spinner"
    >
      <svg
        class="sc-gswNZR jQYqNE circular-loader"
        data-testid="spinner-svg"
        viewBox="25 25 50 50"
      >
        <circle
          class="sc-dkrFOg jOvgpr loader-path"
          cx="50"
          cy="50"
          fill="none"
          r="20"
        />
      </svg>
    </div>
    Click Me
  </button>
</DocumentFragment>
`;

exports[`matches snapshots normal display 1`] = `
<DocumentFragment>
  <button
    class="sc-eDvSVe sc-jSUZER gwaIpe aje-btn aje-btn--primary"
    type="button"
  >
    Click Me
  </button>
</DocumentFragment>
`;
